test/good/generics/name01.px

A = 'A'

func f<A>(A x) A def
    return x

print f(A)
