test/bad/generics/implicit02.px

func f(x) def
    return x
    return false

f(0)
